<resources>
    <string name="app_name">Sports Buddy</string>
    <string name="title_activity_main2" translatable="false">SportsBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_profile">View Profile</string>
    <string name="action_log_out">Log Out</string>
    <string name="action_search">Search</string>
    <string name="action_friends_list">View Friends</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="menu_matches" translatable="false">Buddies</string>
    <string name="menu_sscinfo" translatable="false">SSC</string>
    <string name="menu_timetable">TimeTable</string>
    <string name="profile_about">About</string>
    <string name="profile_name">Name</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_age">Age</string>
    <string name="profile_profile">Profile</string>
    <string name="ssce_openingtimes">Check the SSCE opening times</string>
    <string name="ssce_activities">Check the list of all activities</string>
    <string name="ssce_caption">SSCE Information</string>
    <string name="item_name">Name</string>
    <string name="item_sports">Sports</string>
    <string name="item_level" translatable="false">Level</string>
    <string name="item_accept">Accept</string>
    <string name="item_deny">Deny</string>
    <string name="item_remove">Remove Match</string>
    <string name="friend_remove">Remove Friend</string>
    <string name="settings_dark">Dark Theme</string>
    <string name="settings_dutch" translatable="false">Nederlands</string>
    <string name="settings_notification">Notifications</string>
    <string name="settings_caption">Settings</string>
    <string name="add_new_slot">Add new slot</string>
    <string name="matches" translatable="false">Matches</string>
    <string name="requests">Requests</string>
    <string name="ssc_caption">SSC Information</string>
    <string name="about">About</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="send_a_message">Send a message</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="a_verification_email_has_been_sent_to_your_email_address_please_verify_it_to_continue">A verification email has been sent to your email address. Please verify it to continue.</string>
    <string name="btncontinue">Continue</string>
    <string name="select_location">Select Location:</string>
    <string name="address">Address:</string>
    <string name="phone_number">Phone number:</string>
    <string name="e_mail_website" translatable="false">E-mail/Website:</string>
    <string name="facilities">Facilities:</string>
    <string name="opening_times">Opening times:</string>
    <string name="monday">Monday:</string>
    <string name="thursday">Thursday:</string>
    <string name="friday">Friday:</string>
    <string name="wednesday">Wednesday:</string>
    <string name="tuesday">Tuesday:</string>
    <string name="saturday">Saturday:</string>
    <string name="sunday">Sunday:</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="log_out">Log Out</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="level" translatable="false">Level</string>
    <string name="sports">Sports</string>
    <string name="save_changes">Save Changes</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="camera" translatable="false">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="activity">Activity: </string>
    <string name="time">Time: </string>
    <string name="facility">Facility: </string>
    <string name="addImage">Add Image From</string>
    <string name="nl">nl</string>
    <string name="change_language_to">Change Language to:</string>
    <string name="link_activities"><a href="https://venusp.tue.nl/sci-cgi/sci_7012.opl?actie=perdag&amp;collegejaar="> Click here to view activities</a></string>
    <string name="link_occupancy"><a href="https://venusp.tue.nl/sci-cgi/sci_2592.opl">Click here to view current occupancy and reservations</a></string>

</resources>
