<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="28dp"
        android:text="@string/settings_caption"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/swLang"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginBottom="286dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="10dp"
        android:text="@string/settings_dutch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView11"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/swNot"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"
        android:text="@string/settings_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swThm" />

    <Switch
        android:id="@+id/swThm"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="58dp"
        android:text="@string/settings_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/TextView11"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/change_language_to"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swNot" />

</android.support.constraint.ConstraintLayout>