<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textNameProfile"
        android:layout_width="308dp"
        android:layout_height="20dp"
        android:layout_marginStart="238dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/item_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/age"
        android:layout_width="309dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/profile_age"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintTop_toBottomOf="@+id/gender"
        tools:layout_editor_absoluteX="158dp" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="308dp"
        android:layout_height="21dp"
        android:layout_marginStart="238dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/profile_gender"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNameProfile" />

    <ImageButton
        android:id="@+id/profileImg"
        android:layout_width="101dp"
        android:layout_height="89dp"
        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="113dp" />

    <Button
        android:id="@+id/btnRemove"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/friend_remove"
        app:layout_constraintTop_toBottomOf="@+id/age"
        tools:layout_editor_absoluteX="126dp" />

</android.support.constraint.ConstraintLayout>