<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    android:background="#DCDCDC">

    <TextView
        android:id="@+id/textNameProfile"
        android:layout_width="308dp"
        android:layout_height="0dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:text="@string/profile_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImg" />

    <TextView
        android:id="@+id/textAgeProfile"
        android:layout_width="309dp"
        android:layout_height="0dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/profile_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGenderProfile" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="73dp"
        android:layout_height="43dp"
        android:layout_marginEnd="128dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="28dp"
        android:text="@string/profile_profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAboutProfile"
        android:layout_width="308dp"
        android:layout_height="0dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/profile_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAgeProfile" />

    ImageButton
        android:id="@+id/editProfileButton"
        android:layout_width="26dp"
        android:layout_height="33dp"
        android:layout_marginEnd="84dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <TextView
        android:id="@+id/textGenderProfile"
        android:layout_width="308dp"
        android:layout_height="0dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/profile_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNameProfile" />

    <ImageButton
        android:id="@+id/profileImg"
        android:layout_width="101dp"
        android:layout_height="89dp"
        android:layout_marginTop="17dp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

</android.support.constraint.ConstraintLayout>