<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/clockImg"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="23dp"
        android:contentDescription="clock"
        app:layout_constraintEnd_toStartOf="@+id/openUntil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@android:drawable/ic_menu_recent_history" />

    <TextView
        android:id="@+id/openUntil"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/ssce_openingtimes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/ssceAct"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="68dp"
        android:text="@string/ssce_activities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openUntil" />

    <ImageView
        android:id="@+id/actImg"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="23dp"
        android:contentDescription="activities"
        app:layout_constraintEnd_toStartOf="@+id/ssceAct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clockImg"
        app:srcCompat="@android:drawable/ic_menu_agenda" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="28dp"
        android:text="@string/ssce_caption"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>